--- a/sming.html
+++ b/sming.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="src/assets/colour-tokens.css" />
-    <title>Sming Board</title>
+    <title>Flex Playground</title>
   </head>
   <body>
     <script src="src/data.js"></script>
@@ -11,7 +11,7 @@
     <script src="src/vue.js"></script>
     <script src="dist/smashboard-components.min.js"></script>
     <div id="app">
-      <v-sming example-prop="Sming" />
+      <v-flex-playground />
     </div>
     <script src="index.js"></script>
   </body>
